fix AppBar cut off in fullscreen
currently there is no need to position anything absolute to the top.

--- a/client/src/components/page/page.module.css
+++ b/client/src/components/page/page.module.css
@@ -10,9 +10,6 @@
 }
 
 .page__scroll-container {
-    /* enable correct positioning of overlays with position: absolute */
-    position: relative;
-
     overflow: auto;
     display: grid;
     justify-items: center;
